--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,12 @@
-<h1>New User</h1>
-
-<%= render "form" %>
+<h1> Sign up</h1>
+<%= form_for @user do |f| %>
+  <%= f.label "Username" %>
+  <%= f.text_field :username %>
+  <%= f.label "Email" %>
+  <%= f.text_field :email %>
+  <%= f.label "Password" %>
+  <%= f.password_field :password %>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
+  <%= f.submit "Sign Up" %>
+<% end %>
