--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -3,5 +3,6 @@
 <%= form_for @question do |f| %>
   <%= f.label :content %>
   <%= f.text_field :content %>
+  <%= f.hidden_field(:user_id, :value => current_user.id) %>
   <%= f.submit %>
 <% end %>
