--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @questions.each do |question| %>
-    <li><%= link_to "Show", question_path(question) %></li>
+    <li><%= link_to question.content, question_path(question) %></li>
   <% end %>
 </ul>
 
