--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,7 @@
 <h1>Show Question</h1>
 
+<h3><%= @question.content %></h3>
+
 <p><%= link_to "Edit", edit_question_path(@question) %></p>
 <p><%= link_to "Delete", question_path(@question),
                          :data => {:confirm => "You sure?",
